--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,8 @@
     <script src="{{ url_for('static', filename='js/vue.js') }}"></script>
     <script src="{{ url_for('static', filename='js/vue-router.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <script>const token = "{{ csrf_token() }}";</script>
     {% block js %} {% endblock%}
   </body>
+
 </html>
